--- a/index.html
+++ b/index.html
@@ -10,6 +10,46 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-slate-800">
-    <section class="max-w-md min-h-screen mx-auto py-6 bg-gray-200"></section>
+    <section class="max-w-md min-h-screen mx-auto py-6 bg-gray-200">
+
+        <!-- header logo -->
+        <header>
+            <nav class="flex justify-center items-center mt-6">
+                <div class="mt-10 relative flex justify-center items-center w-9/12 mb-10">
+                    <img class="w-48 absolute" src="assets/bg.png" alt="">
+                    <img class="w-16" src="assets/Group.png" alt="">
+                </div>
+            </nav>
+        </header>
+
+        <!-- login form -->
+        <div class="">
+            <div class="hero-content flex-col lg:flex-row-reverse">
+              <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                <form class="card-body">
+                  <div class="form-control">
+                    <label class="label">
+                      <span class="label-text">Account Number</span>
+                    </label>
+                    <input value="12345678910" id="account-number" type="number" placeholder="your account number" class="input input-bordered" required />
+                  </div>
+                  <div class="form-control">
+                    <label class="label">
+                      <span class="label-text">Pin</span>
+                    </label>
+                    <input value="1234" id="pin" type="text" placeholder="your pin" class="input input-bordered" required />
+                    <label class="label">
+                      <a href="#" class="label-text-alt link link-hover">Forgot Pin?</a>
+                    </label>
+                  </div>
+                  <div class="form-control mt-6">
+                    <button id="login-btn" class="btn btn-primary bg-black border-black">Login</button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+    </section>
+    <script src="script/login.js"></script>
 </body>
 </html>
