--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                     <label class="label">
                       <span class="label-text">Pin</span>
                     </label>
-                    <input value="1234" id="pin" type="text" placeholder="your pin" class="input input-bordered" required />
+                    <input value="1234" id="pin" type="password" placeholder="your pin" class="input input-bordered" required />
                     <label class="label">
                       <a href="#" class="label-text-alt link link-hover">Forgot Pin?</a>
                     </label>
                   </div>
                   <div class="form-control mt-6">
-                    <button id="login-btn" class="btn btn-primary bg-black border-black">Login</button>
+                    <button id="login-btn" class="btn btn-primary bg-black border-black text-white">Login</button>
                   </div>
                 </form>
               </div>
