did some minor changes

--- a/main.html
+++ b/main.html
@@ -132,6 +132,7 @@
             </div>
       </section>
     </main>
+    <script src="script/utilities.js"></script>
     <script src="script/addmoney.js"></script>
     <script src="script/toggle.js"></script>
     <script src="script/cashout.js"></script>
